[package]
name = "super_resolution_upscaler"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["image", "tokio"] }
ort = { version = "2.0.0-rc.4", features = ["load-dynamic"] }
ndarray = "0.16"
image = "0.25"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
rfd = "0.14"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"